Get an angular app and controller on the page.

--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
+  <body ng-app="listular">
     <div class="container">
+      <div ng-controller="CounterController">
+      </div>
+      <button ng-click="sayHi()">Click Me!</button>
       <p>Welcome to your life.</p>
     </div>
     <script src="js/bundle.js"></script>
